# nitpickers

./: Cargo.toml
examples/: foo.rs
src/: lib.rs
